# veritas-custos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
_reference/veritas-fides/: .env.example  .gitignore  README.md  pyrightconfig.json  requirements.txt  run_judge_test.py
_reference/veritas-fides/agents/: reputation_oracle_agent.py  sourceattest_agent.py  trustgate_agent.py
_reference/veritas-fides/core/: orchestrator.py  reputation_oracle_logic.py  sourceattest_logic.py  trustgate_checks.py
_reference/veritas-fides/docs/: CTS-1.md
_reference/veritas-fides/mock_payloads/: clean_data.json  corrupted_data.json
_reference/veritas-fides/tests/: test_pipeline.py
agent_verifier/: package.json  server.py  trustgate.py  ui.html
agent_verifier/core/: decision_agent.py  reputation_oracle.py  source_attest.py
consuming_agent/: trust_gate_client.py
identity_checker/: identity_checker.py
keys/: public_key.pem  public_key_hex
veritas_custos_contract/: CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Odra.toml  README.md
veritas_custos_contract/.cargo/: config.toml
veritas_custos_contract/cli/: Cargo.toml  cli.rs
veritas_custos_contract/resources/: casper-test-contracts.toml
veritas_custos_contract/veritas_custos/: Cargo.toml
veritas_custos_contract/veritas_custos/src/: lib.rs  veritas_custos.rs
veritas_custos_contract/wasm/: VeritasCustos.wasm
